fixed typo in data_enabled_online_mode_activated

--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -60,7 +60,7 @@ APNdroid non è stato trovato, o è aggiornato ad una versione troppo vecchia. P
     <string name="wifi_disabled_travel_mode_activated">Wifi spento. Modalità viaggio attivata.</string>
     <string name="wifi_toggling_not_enabled_standard_mode_activated">Commutazione Wifi non attiva. Modalità Standard attivata.</string>
     <string name="data_disabled_offline_mode_activated">Dati disabilitati. Modalità offline attivata.</string>
-    <string name="data_enabled_online_mode_activated">Dati attivati. Modalità offline attivata.</string>
+    <string name="data_enabled_online_mode_activated">Dati attivati. Modalità online attivata.</string>
     <string name="running_account_sync">Sicronizzazione account in corso.</string>
     <string name="data_disabled_night_mode_started">Dati disattivati, modalità notte attivata</string>
     <string name="data_switched_on_while_charging">Dati attivati durante la ricarica</string>
