--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -65,10 +65,10 @@ for mobile data toggling.
     <string name="error_cpu_stats">"ERROR: No es posible obtener estadísticas de CPU: "</string>
     <string name="cpu_sleep">CPU sleep</string>
     <string name="screen_on_time">Screen on time</string>
-    <string name="battery_usage_while_screen_off">Battery usage while screen off</string>
-    <string name="battery_level">Battery level</string>
+    <string name="battery_usage_while_screen_off">Uso de la batería, mientras pantalla apagada</string>
+    <string name="battery_level">Nivel de la batería</string>
     <string name="background_cpu_usage">Background CPU usage (experimental)</string>
-    <string name="wakelocks_prevent_the_cpu_from_sleeping">Wakelocks prevent the CPU from sleeping</string>
+    <string name="wakelocks_prevent_the_cpu_from_sleeping">Wakelocks impiden la CPU de dormir</string>
     <string name="time_spend_at_various_cpu_speeds">Time spend at various CPU speeds</string>
     <string name="error">"ERROR: "</string>
     <string name="suffix_days">"d "</string>
@@ -79,11 +79,11 @@ for mobile data toggling.
     <string name="airplane_mode_is_on">Airplane mode is on</string>
     <string name="data_while_screen_on_night_mode_cancelled">Data while screen on, night mode cancelled</string>
     <string name="night_mode_ended_starting_sync">Night mode ended, starting sync</string>
-    <string name="wifi_disabled_travel_mode_activated">Wifi disabled. Travel mode activated.</string>
-    <string name="wifi_toggling_not_enabled_standard_mode_activated">Wifi toggling not enabled. Standard mode activated.</string>
-    <string name="data_disabled_offline_mode_activated">Data disabled. Offline mode activated.</string>
-    <string name="data_enabled_online_mode_activated">Data enabled. Online mode activated.</string>
-    <string name="running_account_sync">Running account sync.</string>
+    <string name="wifi_disabled_travel_mode_activated">Wifi disabled. Moda viaje activada.</string>
+    <string name="wifi_toggling_not_enabled_standard_mode_activated">Wifi toggling not enabled. Moda estándar activada.</string>
+    <string name="data_disabled_offline_mode_activated">Datos desactivados. Moda fuera de línea activada.</string>
+    <string name="data_enabled_online_mode_activated">Datos activados. Moda en línea activada.</string>
+    <string name="running_account_sync">Sincronizando cuentas.</string>
     <string name="data_disabled_night_mode_started">Data disabled, night mode started</string>
     <string name="data_switched_on_while_charging">Data switched on while charging</string>
     <string name="data_switched_on_while_screen_is_on">Data switched on while screen is on</string>
@@ -91,9 +91,9 @@ for mobile data toggling.
     <string name="started_on_boot">Started on boot</string>
     <string name="data_connected_running_sync">Data connected, running sync</string>
     <string name="starting">Iniciando...</string>
-    <string name="data_enabled_until_next_night_mode_start">Data enabled until night mode</string>
-    <string name="data_disabled_waiting_for_next_sync">Data disabled, waiting for sync</string>
-    <string name="data_disabled_next_sync_at_">Next sync at</string>
+    <string name="data_enabled_until_next_night_mode_start">Datos activados hasta el modo nocturno</string>
+    <string name="data_disabled_waiting_for_next_sync">Datos desactivados, esperando para la sincronización</string>
+    <string name="data_disabled_next_sync_at_">Próxima sincronización a</string>
     <string name="settings">Ajustes</string>
     <string name="mode_always_offline">Siempre fuera de línea</string>
     <string name="mode_always_online">Siempre en línea</string>
